# pyTpx3Angles

./: .gitmodules  CMakeLists.txt  README.md  install.ps1  pyproject.toml  setup.py
.github/workflows/: cmake.yml
examples/: test.py
pyBind/: bindings.hpp
src/: bindings.cpp
